not completed but need to get checklist dont. Mostly fixed the video buttons, having an issue with the report button and align the text vetically

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -129,6 +129,7 @@
 	background-color: $concisely-blue;
 	text-align: center;
 	display: inline-block;
+	align-items: center;
 	position: relative;
 	text-decoration: none;
 	color: whitesmoke;
