--- a/app/assets/stylesheets/pages/_video.scss
+++ b/app/assets/stylesheets/pages/_video.scss
@@ -21,7 +21,7 @@
 
 .video-button-report {
   max-width: 100%!important;
-  top: 376px;
+  top: 230px;
   height: 100px!important
 }
 
